snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3-all.jar.sha512
692037733f497e1c563b73116d9b2586b7f60d2daa46254ddb1c125ce2d531549f2058ecfa506e79d11254de09e2525107b2a980e0b3c76040bbc7120436d505